<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_HmiMiddle" Id="{90f9ad0f-8bc3-4e17-a23d-018931ac9453}">
    <Declaration><![CDATA[TYPE ST_HmiMiddle :
STRUCT CONSTANT 
	//General Pages
	Start 				: STRING := 'WebContent/Middle/Start.content';
	AlarmManager 		: STRING := 'WebContent/Middle/AlarmManager.content';
	ParameterManager 	: STRING := 'WebContent/Middle/ParameterManager.content';
	
	//Units
	UN_CleanroomConnect	: STRING := 'WebContent/Middle/UN_CleanroomConnect/UN_CleanroomConnect.content';
	
	//Equipment Modules
	EM_Utilities		: STRING := 'WebContent/Middle/EM_Utilities/EM_Utilities.content';
	EM_PalletConveyor	: STRING := 'WebContent/Middle/EM_PalletConveyor/EM_PalletConveyor.content';
	EM_DockingInterface	: STRING := 'WebContent/Middle/EM_DockingInterface/EM_DockingInterface.content';
	EM_LiftingTransport	: STRING := 'WebContent/Middle/EM_LiftingTransport/EM_LiftingTransport.content';
//++EM_AirTreatment		: STRING := 'WebContent/Middle/EM_AirTreatment/EM_AirTreatment.content';

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>