<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_SeqDockingCabin" Id="{12ab4e81-24e3-4a12-88fe-889a44a12a9e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_SeqDockingCabin :
(
	IDLE := 0,
	
	//DOCK
	DOCK_CHECK_CLEANROOM_DOORS,
	DOCK_CHECK_PRESSURE_DECO,
	DOCK_OPEN_OUTER_DOOR,
	DOCK_OPEN_DOCKING_CLAMPS,
	DOCK_WAIT_FOR_BOX_AT_DOCK_POSITION,
	DOCK_CLOSE_DOCKING_CLAMPS,
	DOCK_DOCK_BOX,
	DOCK_FLUSHING_DECO,
	DOCK_WAIT,
	DOCK_EQUALIZE_DECO,
	DOCK_RELEASE_CLEANROOM_DOOR,
	DOCK_CLEANROOM_DOOR_OPENED,
	DOCK_LOCK_CLEANROOM_DOOR,
	DOCK_PRESSURIZE_DECO,
	
	//UNDOCK
	UNDOCK_CHECK_CLEANROOM_DOORS,
	UNDOCK_CHECK_PRESSURE_DECO,
	UNDOCK_UNDOCK_BOX,
	UNDOCK_WAIT_FOR_BOX_REMOVED,
	UNDOCK_DOCK_BOX,
	UNDOCK_CLOSE_DOCKING_CLAMPS,
	UNDOCK_CLOSE_OUTER_DOOR,
	
	READY := 10000,
	ERROR := 20000	
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>