<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SettingsDockingCabin" Id="{d884d8df-672f-4c3b-a380-335acd4eb925}">
    <Declaration><![CDATA[TYPE ST_SettingsDockingCabin :
STRUCT
	stSettingsDoors : ST_SettingsDoors;
	stSettingsDockingInterface : ST_SettingsDockingInterface;
	stSettingsAirTrearment : ST_SettingsAirTrearment;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>