<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="EM_DockingCabin" Id="{ddb6504e-a47b-46ee-987c-d5bb3bc3434b}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK EM_DockingCabin EXTENDS EM_Base
VAR CONSTANT 
	c_nResultDataSize : UINT := 20;
END_VAR

VAR_INPUT
//Inputs
	i_stSettings : ST_SettingsDockingCabin;
	
	i_ref_objCarrier : REFERENCE TO OBJ_Carrier;
END_VAR

VAR
//------------------------------------------//
//Equipment Modules (sub equipment)
	s_emDoors : EM_Doors;
	s_emDockingInterface : EM_DockingInterface;
	s_emAirTreatment : EM_AirTreatment;
//------------------------------------------//

//------------------------------------------//
//Outputs
	//..

//------------------------------------------//

//Requests
	s_bReqToDock : BOOL;
	s_bReqToUndock : BOOL;
	s_bReqToUnlockCleanroomDoor : BOOL;
	
//Status
	s_bStaBoxAtPreDockPosition : BOOL;
	s_bStaBoxAtDockPosition : BOOL;
	s_bStaBoxRemovedFromDockPosition : BOOL;
	
//Properties
	
//------------------------------------------//
//Params
	//Tool settings
	s_fbParamToolHardwareNr : FB_HmiParamHandler;
    s_fbParamToolSoftwareVersion : FB_HmiParamHandler;

	s_fbParamName : FB_HmiParamHandler;
	s_fbParamNumber : FB_HmiParamHandler;
	s_fbParamRevision : FB_HmiParamHandler;
	
	//Product settings (Maybe)
	s_fbParamTotalStroke : FB_HmiParamHandler;
	s_fbParamStepStroke	: FB_HmiParamHandler;
	s_fbParamAveragingNumberTest : FB_HmiParamHandler;
	
	s_fbParamaMaxMagnitudeCriteria : FB_HmiParamHandler;
	
	s_fbParamRefIduBottom : FB_HmiParamHandler;
	s_fbParamRefItm : FB_HmiParamHandler;
	s_fbParamRefCenterTpmPipe : FB_HmiParamHandler;
	s_fbParamRefCpValve	: FB_HmiParamHandler;
//------------------------------------------//

//------------------------------------------//
//Variables
	s_eSequence : E_SeqDockingCabin;
	s_ePrevStep : E_SeqDockingCabin;
	s_fbSeqControl : FB_SeqControl;
	
//------------------------------------------//

//------------------------------------------//
//Sensor data
	s_aMagneticX						: ARRAY[0..c_nResultDataSize] OF LREAL;
	s_aMagneticY						: ARRAY[0..c_nResultDataSize] OF LREAL;
	s_aMagneticZ						: ARRAY[0..c_nResultDataSize] OF LREAL;
	s_aMagneticMagnitude				: ARRAY[0..c_nResultDataSize] OF LREAL;
	s_aProbePositionZ					: ARRAY[0..c_nResultDataSize] OF LREAL;
	
	s_sXMLData							: STRING(Param_Project.n_MaxLenghtXmlDbRow*Param_Project.n_NumberofRowsXmlDb);
	
	s_aHmi_MagneticTest					: ARRAY[1..3,0..c_nResultDataSize] OF ST_POINT;
	
//	s_aHmi_ProbePositionZ				: ARRAY[1..1,1..GVL_Datalogging.c_nHmiLogSize] OF ST_POINT;
//------------------------------------------//

//------------------------------------------//
//Alarms
	
	
//------------------------------------------//

//------------------------------------------//
//Hmi
	s_nToHmiStepNr						: INT;
	s_nToHmiMaxStepNr					: INT;
	s_sToHmiInstructionText				: T_MAXSTRING;
	s_sToHmiProcedure					: T_MAXSTRING;
	
	s_fbHmiBtnReset						: FB_HmiBtn;
	
	
//------------------------------------------//
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
SUPER^();
]]></ST>
    </Implementation>
    <Folder Name="Base" Id="{0bdf27b8-843b-475e-be55-cdb4e5600f55}" />
    <Method Name="_m_Alarms" Id="{91ca146d-b383-4bc6-9275-30ba5174e1b8}" FolderPath="Base\">
      <Declaration><![CDATA[METHOD PROTECTED _m_Alarms : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF NOT SUPER^._m_Alarms() THEN
	RETURN;
END_IF
	
	s_fbAlarmHandlerOuterDoorNoAllowedToOpen(
		i_bStaActive := i_bReqEnable AND s_bWrnOuterDoorNoAllowedToOpen,
		i_eAlarmLevel := E_AlarmLevel.Warning,
		i_sAlarmText := 'Outer Door Not Allowed To Open');
	
	s_fbAlarmHandlerOuterDoorNoAllowedToClose(
		i_bStaActive := i_bReqEnable AND s_bWrnOuterDoorNoAllowedToClose,
		i_eAlarmLevel := E_AlarmLevel.Warning,
		i_sAlarmText := 'Outer Door Not Allowed To Close');
	
	s_fbAlarmHandlerCleanroomDoorNoAllowedToRelease(
		i_bStaActive := i_bReqEnable AND s_bWrnCleanroomDoorNoAllowedToRelease,
		i_eAlarmLevel := E_AlarmLevel.Warning,
		i_sAlarmText := 'Cleanroom Door Not Allowed To Release/Open');
	
	s_fbAlarmHandlerCleanroomDoorNoAllowedToLock(
		i_bStaActive := i_bReqEnable AND s_bWrnCleanroomDoorNoAllowedToLock,
		i_eAlarmLevel := E_AlarmLevel.Warning,
		i_sAlarmText := 'Cleanroom Door Not Allowed To Lock');
	
	//Reset error/warning bits
	IF i_bCmdReset THEN
		s_bWrnOuterDoorNoAllowedToOpen := FALSE;
		s_bWrnOuterDoorNoAllowedToClose := FALSE;
		s_bWrnCleanroomDoorNoAllowedToRelease := FALSE;
		s_bWrnCleanroomDoorNoAllowedToLock := FALSE;
	END_IF

_m_Alarms := TRUE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="_m_Hmi" Id="{ae238055-2f7f-404e-8ea8-17f42275f2ef}" FolderPath="Base\">
      <Declaration><![CDATA[METHOD PROTECTED _m_Hmi : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF NOT SUPER^._m_Hmi() THEN
	RETURN;
END_IF

//Buttons
s_fbHmiBtnReset();
	
s_fbHmiBtnCloseOuterDoor();
s_fbHmiBtnOpenOuterDoor();
	
s_fbHmiBtnApplyLockCleanroomDoor();;
s_fbHmiBtnReleaseLockCleanroomDoor();

//Leds	
s_fbHmiLedOuterDoorClosed(i_bStaLed := s_bStaOuterDoorClosed);
s_fbHmiLedOuterDoorOpened(i_bStaLed := s_bStaOuterDoorOpened);
	
s_fbHmiLedCleanDoorClosed(i_bStaLed := s_bStaCleanroomDoorClosed);
s_fbHmiLedCleanDoorOpened(i_bStaLed := s_bStaCleanroomDoorOpened);
s_fbHmiLedCleanroomDoorLocked(i_bStaLed := s_bStaCleanroomLockApplied);
s_fbHmiLedCleanroomDoorReleased(i_bStaLed := s_bStaCleanroomLockReleased);

_m_Hmi := TRUE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="_m_Init" Id="{55a77c57-0b59-4b6a-972f-95b5a853fa42}" FolderPath="Base\">
      <Declaration><![CDATA[METHOD PROTECTED _m_Init : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF NOT SUPER^._m_Init() THEN
	RETURN;
END_IF

s_emDoors.i_stSettings := i_stSettings.stSettingsDoors;
s_emDockingInterface.i_stSettings := i_stSettings.stSettingsDockingInterface;
s_emAirTreatment.i_stSettings := i_stSettings.stSettingsAirTrearment;

//Equipment Module
	
//---------------------------------//	

//----------------------------------//

	
//----------------------------------//	
//Hmi
	s_fbHmiBtnReset.p_eButtontype := E_HmiButtonType.PUSHBUTTON;
	s_fbHmiBtnReset.p_bStaVisible := FALSE;
	s_fbHmiBtnReset.p_bStaEnabled := FALSE;		
	s_fbHmiBtnReset.p_sBtnText := 'Reset';
	
	s_fbHmiBtnCloseOuterDoor.p_eButtontype := E_HmiButtonType.PUSHBUTTON;
	s_fbHmiBtnCloseOuterDoor.p_bStaVisible := FALSE;
	s_fbHmiBtnCloseOuterDoor.p_bStaEnabled := FALSE;		
	s_fbHmiBtnCloseOuterDoor.p_sBtnText := 'Close Outer Door';
	
	s_fbHmiBtnOpenOuterDoor.p_eButtontype := E_HmiButtonType.PUSHBUTTON;
	s_fbHmiBtnOpenOuterDoor.p_bStaVisible := FALSE;
	s_fbHmiBtnOpenOuterDoor.p_bStaEnabled := FALSE;		
	s_fbHmiBtnOpenOuterDoor.p_sBtnText := 'Open Outer Door';
	
	s_fbHmiBtnApplyLockCleanroomDoor.p_eButtontype := E_HmiButtonType.PUSHBUTTON;
	s_fbHmiBtnApplyLockCleanroomDoor.p_bStaVisible := FALSE;
	s_fbHmiBtnApplyLockCleanroomDoor.p_bStaEnabled := FALSE;		
	s_fbHmiBtnApplyLockCleanroomDoor.p_sBtnText := 'Lock Cleanroom Door';
	
	s_fbHmiBtnReleaseLockCleanroomDoor.p_eButtontype := E_HmiButtonType.PUSHBUTTON;
	s_fbHmiBtnReleaseLockCleanroomDoor.p_bStaVisible := FALSE;
	s_fbHmiBtnReleaseLockCleanroomDoor.p_bStaEnabled := FALSE;		
	s_fbHmiBtnReleaseLockCleanroomDoor.p_sBtnText := 'Release Cleanroom Door';

	s_fbHmiLedOuterDoorClosed.p_bStaVisible := FALSE;
	s_fbHmiLedOuterDoorClosed.p_sToHmiDescriptionLed := 'Outer Door Closed';
	
	s_fbHmiLedOuterDoorOpened.p_bStaVisible := FALSE;
	s_fbHmiLedOuterDoorOpened.p_sToHmiDescriptionLed := 'Outer Door Opened';
	
	s_fbHmiLedCleanDoorClosed.p_bStaVisible := FALSE;
	s_fbHmiLedCleanDoorClosed.p_sToHmiDescriptionLed := 'Cleanroom Door Closed';
	
	s_fbHmiLedCleanDoorOpened.p_bStaVisible := FALSE;
	s_fbHmiLedCleanDoorOpened.p_sToHmiDescriptionLed := 'Cleanroom Door Opened';
	
	s_fbHmiLedCleanroomDoorLocked.p_bStaVisible := FALSE;
	s_fbHmiLedCleanroomDoorLocked.p_sToHmiDescriptionLed := 'Cleanroom Door Locked';
	
	s_fbHmiLedCleanroomDoorReleased.p_bStaVisible := FALSE;
	s_fbHmiLedCleanroomDoorReleased.p_sToHmiDescriptionLed := 'Cleanroom Door Released';
 
//Initialize all moving averages

//----------------------------------//	

//----------------------------------//	
//Inputs
//--s_diTableDownSensor.i_stSettings.tmInputDelay	:= T#0S;	
//--s_diBtnTableDown.i_stSettings.tmInputDelay		:= T#0S;
//--s_diBtnStop.i_stSettings.tmInputDelay			:= T#0S;
//----------------------------------//	

//----------------------------------//	
//Inputs
//--s_doRelayTableDown.i_stSettings.bCfgDelay		:= FALSE;	
//--s_doRelayTableDown.i_stSettings.tmOutputDelay	:= T#0S;	
//----------------------------------//	

_m_Init := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="_m_Inputs" Id="{cc1bc341-dd7b-479d-bdfb-f8e12a5629d4}" FolderPath="Base\">
      <Declaration><![CDATA[METHOD PROTECTED _m_Inputs : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF NOT SUPER^._m_Inputs() THEN
	RETURN;
END_IF


s_bIlckOuterDoorToOpen := i_bIlckOuterDoorToOpen;
s_bIlckOuterDoorToClose := i_bIlckOuterDoorToClose;
	
s_bIlckCleanroomDoorToRelease := i_bIlckCleanroomDoorToRelease;
s_bIlckCleanroomDoorToLock := i_bIlckCleanroomDoorToLock;

_m_Inputs := TRUE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="_m_Modules" Id="{db78043d-7673-487b-a1f0-6fd7aca5bdfb}" FolderPath="Base\">
      <Declaration><![CDATA[METHOD PROTECTED _m_Modules : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF NOT SUPER^._m_Devices() THEN
	RETURN;
END_IF

//Interlockes
//EM_Doors
s_emDoors.i_bIlckOuterDoorToClose :=
	NOT(s_emDockingInterface.p_bStaDockingClampsClosed)
	OR NOT(s_bStaBoxRemovedFromDockPosition);
	 
s_emDoors.i_bIlckOuterDoorToOpen :=
	NOT(s_emDockingInterface.p_bStaDockingClampsClosed)
	OR NOT(s_emDoors.p_bStaCleanroomDoorClosed
	OR NOT(s_emDoors.p_bStaCleanroomLockApplied)
	OR NOT (s_emAirTreatment.p_bStaPressurizingOK));

s_emDoors.i_bIlckCleanroomDoorToLock :=
	NOT(s_emDoors.p_bStaCleanroomDoorClosed);

s_emDoors.i_bIlckCleanroomDoorToRelease := 
	NOT(s_emDoors.p_bStaOuterDoorClosed)
	OR NOT (s_emAirTreatment.p_bStaPressurizingOK);
	

//EM_DockingInterface
s_emDockingInterface.i_bIlckDockingClampsToClose := TRUE; //TODO 
s_emDockingInterface.i_bIlckDockingClampsToOpen := TRUE; //TODO
s_emDockingInterface.i_bIlckUnlockingPinsToLock := TRUE; //TODO
s_emDockingInterface.i_bIlckUnlockingPinsToRelease := TRUE; //TODO

//Call of all sub-modules (EM's)
s_emDoors(
	i_bReqEnable := i_bReqEnable, 
	i_eCtrlMode := i_eCtrlMode,
	i_bCmdReset := i_bCmdReset, 
	i_sEmName := 'EM Doors');
	
s_emDockingInterface(
	i_bReqEnable := i_bReqEnable,
	i_eCtrlMode := i_eCtrlMode,
	i_bCmdReset := i_bCmdReset,
	i_sEmName := 'EM Docking Interface');
	
s_emAirTreatment(
	i_bReqEnable := i_bReqEnable,
	i_eCtrlMode := i_eCtrlMode,
	i_bCmdReset := i_bCmdReset,
	i_sEmName := 'EM Air Treatment');	

//Statusses
s_bStaError :=
	s_emDoors.p_bStaError
	OR s_emDockingInterface.p_bStaError
	OR s_emAirTreatment.p_bStaError;
	
_m_Modules := TRUE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="_m_Outputs" Id="{93172bcb-0e3c-41d2-bb2a-06f723a6198a}" FolderPath="Base\">
      <Declaration><![CDATA[METHOD PROTECTED _m_Outputs : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF NOT SUPER^._m_Outputs() THEN
	RETURN;
END_IF

_m_Outputs := TRUE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="m_Main" Id="{8ccf28cb-bddf-43d2-8f41-6ce044de4449}" FolderPath="Base\">
      <Declaration><![CDATA[METHOD PUBLIC m_Main : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF NOT SUPER^.m_Main() THEN
	RETURN;
END_IF


// Hier alleen wel het doorschuiven van de carier posities
				IF s_emDockingInterface.p_bStaBoxAtDockedPosition THEN
					i_ref_objCarrier.p_eLocation := E_Location.DOCKING; 
				END_IF

CASE i_eCtrlMode OF

	E_CtrlMode.IDLE:
		;
	
	E_CtrlMode.AUTOMATIC:
	
		IF (s_eSequence <> E_SeqDockingCabin.IDLE)
			AND (s_eSequence <> E_SeqDockingCabin.ERROR)
			AND (s_eSequence <> E_SeqDockingCabin.READY)
			THEN 
				s_ePrevStep := s_eSequence;
		END_IF
		
		s_fbSeqControl(
			i_nSeqStep := s_eSequence, 
			i_sStepName := TO_STRING(s_fbSeqControl.q_eActState), 
			i_bCmdReset := i_bCmdReset, 
			i_bStaError := s_bStaError); //In case of an error Sequence Control will force sequencer to ERROR step
			
		CASE s_eSequence OF 
		
			E_SeqDockingCabin.IDLE:
			
				s_emAirTreatment.m_Pressurize();
			
				IF s_bReqToDock THEN
					s_eSequence := E_SeqDockingCabin.DOCK_CHECK_CLEANROOM_DOORS;
					
				ELSIF s_bReqToUndock THEN
					s_eSequence := E_SeqDockingCabin.UNDOCK_CHECK_CLEANROOM_DOORS;
				END_IF
						
			//DOCK
			E_SeqDockingCabin.DOCK_CHECK_CLEANROOM_DOORS:
			
				IF s_emDoors.p_bStaCleanroomDoorClosed AND s_emDoors.p_bStaCleanroomLockApplied THEN
					s_eSequence := E_SeqDockingCabin.DOCK_CHECK_PRESSURE_DECO;
					
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN
					{warning '#TODO: Generate warning message, and return to IDLE'}
					s_eSequence := E_SeqDockingCabin.IDLE;
				END_IF
			
			E_SeqDockingCabin.DOCK_CHECK_PRESSURE_DECO:
			
				IF s_emAirTreatment.p_bStaPressurizingOK THEN
					s_eSequence := E_SeqDockingCabin.DOCK_OPEN_OUTER_DOOR;
					
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN
					{warning '#TODO: Generate warning message, and return to IDLE'}
					s_eSequence := E_SeqDockingCabin.IDLE;
				END_IF
			
			E_SeqDockingCabin.DOCK_OPEN_OUTER_DOOR:
			
				IF s_fbSeqControl.q_bStaEntry THEN
					s_emDoors.m_OpenOuterDoor();
				END_IF
				
				IF s_emDoors.p_bStaOuterDoorOpened THEN
					s_eSequence := E_SeqDockingCabin.DOCK_OPEN_DOCKING_CLAMPS;
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF
			
			E_SeqDockingCabin.DOCK_OPEN_DOCKING_CLAMPS:
			
				IF s_fbSeqControl.q_bStaEntry THEN
					s_emDockingInterface.m_OpenDockingClamps();
				END_IF
				
				IF s_emDockingInterface.p_bStaDockingClampsOpened THEN
					s_eSequence := E_SeqDockingCabin.DOCK_WAIT_FOR_BOX_AT_DOCK_POSITION;
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF
			
			E_SeqDockingCabin.DOCK_WAIT_FOR_BOX_AT_DOCK_POSITION:
			
				IF s_bStaBoxAtDockPosition THEN
					s_eSequence := E_SeqDockingCabin.DOCK_DOCK_BOX;
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN
					{warning '#TODO: Generate wwarning to indicate that removing box has taken to lomg'}  
					s_eSequence := E_SeqDockingCabin.DOCK_CLOSE_DOCKING_CLAMPS;
				END_IF
			
			E_SeqDockingCabin.DOCK_CLOSE_DOCKING_CLAMPS:
			
				//Close outer door again after placing box at docking position takes to long
				IF s_fbSeqControl.q_bStaEntry THEN
					s_emDoors.m_CloseOuterDoor();
				END_IF
				
				IF s_emDoors.p_bStaOuterDoorClosed THEN
					s_eSequence := E_SeqDockingCabin.IDLE;
				ELSIF fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF
			
			E_SeqDockingCabin.DOCK_DOCK_BOX:
			
				IF s_fbSeqControl.q_bStaEntry THEN
					s_emDockingInterface.m_DockBox();
				END_IF
				
				IF s_emDockingInterface.p_bStaDockingDone THEN
					s_eSequence := E_SeqDockingCabin.DOCK_FLUSHING_DECO;
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF
			
			E_SeqDockingCabin.DOCK_FLUSHING_DECO:
			
				IF s_fbSeqControl.q_bStaEntry THEN
					s_emAirTreatment.m_Flush();
				END_IF
				
				IF s_emAirTreatment.p_bStaFlushingDone THEN
					s_eSequence := E_SeqDockingCabin.DOCK_WAIT;
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF
			
			E_SeqDockingCabin.DOCK_WAIT:
			
				IF s_fbSeqControl.q_bStaEntry THEN
					s_emAirTreatment.m_Pressurize();
				END_IF
				
				IF s_bReqToUnlockCleanroomDoor THEN
					s_eSequence := E_SeqDockingCabin.DOCK_EQUALIZE_DECO;
				ELSIF s_bReqToUndock THEN
					s_eSequence := E_SeqDockingCabin.UNDOCK_CHECK_CLEANROOM_DOORS; //Switch to undocking
				END_IF
						
			E_SeqDockingCabin.DOCK_EQUALIZE_DECO:
			
				IF s_fbSeqControl.q_bStaEntry THEN
					s_emAirTreatment.m_Equalize();
				END_IF
				
				IF s_emAirTreatment.p_bStaEqualizingDone THEN
					s_eSequence := E_SeqDockingCabin.DOCK_RELEASE_CLEANROOM_DOOR;
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF
			
			E_SeqDockingCabin.DOCK_RELEASE_CLEANROOM_DOOR:
			
				IF s_fbSeqControl.q_bStaEntry THEN
					s_emDoors.m_ReleaseLockCleanroomDoor();
				END_IF
				
				IF s_emDoors.p_bStaCleanroomLockReleased AND s_emDoors.p_bStaCleanroomDoorOpened THEN
					s_eSequence := E_SeqDockingCabin.DOCK_CLEANROOM_DOOR_OPENED;
				ELSIF s_bReqToUndock THEN
					s_eSequence := E_SeqDockingCabin.DOCK_LOCK_CLEANROOM_DOOR;	
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF
			
			E_SeqDockingCabin.DOCK_CLEANROOM_DOOR_OPENED:
			
				IF s_emDoors.p_bStaCleanroomDoorClosed THEN
					s_eSequence := E_SeqDockingCabin.DOCK_LOCK_CLEANROOM_DOOR;
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF
			
			E_SeqDockingCabin.DOCK_LOCK_CLEANROOM_DOOR:
			
				IF s_fbSeqControl.q_bStaEntry THEN
					s_emDoors.m_ApplyLockCleanroomDoor();
				END_IF
				
				IF s_emDoors.p_bStaCleanroomLockApplied AND s_emDoors.p_bStaCleanroomDoorClosed THEN
					s_eSequence := E_SeqDockingCabin.DOCK_PRESSURIZE_DECO;
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF	
			
			E_SeqDockingCabin.DOCK_PRESSURIZE_DECO:
			
				IF s_fbSeqControl.q_bStaEntry THEN
					s_emAirTreatment.m_Pressurize();
				END_IF
				
				IF s_emAirTreatment.p_bStaPressurizingOK THEN
					s_eSequence := E_SeqDockingCabin.DOCK_WAIT;
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF
			
			//UNDOCK
			E_SeqDockingCabin.UNDOCK_CHECK_CLEANROOM_DOORS:
				
				IF s_emDoors.p_bStaCleanroomDoorClosed AND s_emDoors.p_bStaCleanroomLockApplied THEN
					s_eSequence := E_SeqDockingCabin.UNDOCK_CHECK_PRESSURE_DECO;
				
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN
					{warning '#TODO: Generate warning message, and return to IDLE'}
					s_eSequence := E_SeqDockingCabin.IDLE; // of better to go to error?
				END_IF
				
			E_SeqDockingCabin.UNDOCK_CHECK_PRESSURE_DECO:
			
				IF s_emAirTreatment.p_bStaPressurizingOK THEN
					s_eSequence := E_SeqDockingCabin.UNDOCK_UNDOCK_BOX;

				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN
					{warning '#TODO: Generate warning message, and return to IDLE'}
					s_eSequence := E_SeqDockingCabin.IDLE; // of better to go to error?
				END_IF
			
			E_SeqDockingCabin.UNDOCK_UNDOCK_BOX:
			
				IF s_fbSeqControl.q_bStaEntry THEN
					s_emDockingInterface.m_UndockBox();
				END_IF
				
				IF s_emDockingInterface.p_bStaUndockingDone THEN
					s_eSequence := E_SeqDockingCabin.UNDOCK_WAIT_FOR_BOX_REMOVED;
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF
				
			E_SeqDockingCabin.UNDOCK_WAIT_FOR_BOX_REMOVED:
			
				IF s_bStaBoxRemovedFromDockPosition THEN
					s_eSequence := E_SeqDockingCabin.UNDOCK_CLOSE_DOCKING_CLAMPS;
					
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN
					{warning '#TODO: Generate wwarning to indicate that removing box has taken to lomg'}  
					s_eSequence := E_SeqDockingCabin.UNDOCK_DOCK_BOX;
				END_IF
			
			E_SeqDockingCabin.UNDOCK_DOCK_BOX:
			
				//Re-Dock box after removing box from docking position takes to long
				IF s_fbSeqControl.q_bStaEntry THEN
					s_emDockingInterface.m_DockBox();
				END_IF
				
				IF s_emDockingInterface.p_bStaDockingDone THEN
					s_eSequence := E_SeqDockingCabin.IDLE;
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF

			E_SeqDockingCabin.UNDOCK_CLOSE_DOCKING_CLAMPS:

				IF s_fbSeqControl.q_bStaEntry THEN
					s_emDockingInterface.m_CloseDockingClamps();
				END_IF
				
				IF s_emDockingInterface.p_bStaDockingClampsClosed THEN
					s_eSequence := E_SeqDockingCabin.UNDOCK_CLOSE_OUTER_DOOR;
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF
			
			E_SeqDockingCabin.UNDOCK_CLOSE_OUTER_DOOR:
			
				IF s_fbSeqControl.q_bStaEntry THEN
					s_emDoors.m_CloseOuterDoor();
				END_IF
				
				IF s_emDoors.p_bStaOuterDoorClosed THEN
					s_eSequence := E_SeqDockingCabin.IDLE;
				ELSIF s_fbSeqControl.q_tmStepTime > T#10S THEN  
					s_eSequence := E_SeqDockingCabin.ERROR;
				END_IF

			//ERROR	
			E_SeqDockingCabin.ERROR:
			
				IF i_bCmdReset THEN
					s_ePrevStep := s_eSequence;
				END_IF
			
			//READY
			E_SeqDockingCabin.READY:
				;
				
		ELSE
			{warning '#TODO: Consider to trigger warning, error, move to ERROR step instead of IDLE'}
			s_eSequence := E_SeqDockingCabin.ERROR;
		END_CASE
	
	E_CtrlMode.MANUAL:
		;
		
END_CASE
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>